[pom] Drop add opens of java lang and java util as not needed now
note the parent still is adding java lang one, will later try to get rid of that.