@@ -200,21 +200,12 @@
 
   <profiles>
     <profile>
-      <id>add-opens</id>
-      <activation>
-        <jdk>[17,)</jdk>
-      </activation>
-      <properties>
-        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
-      </properties>
-    </profile>
-    <profile>
       <id>security-manager</id>
       <activation>
         <jdk>[18,)</jdk>
       </activation>
       <properties>
-        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED -Djava.security.manager=allow</argLine>
+        <argLine>-Djava.security.manager=allow</argLine>
       </properties>
     </profile>
   </profiles>
